# traj_gen

./: CMakeLists.txt  package.xml  test.sh
include/: energyOptimal.h  orbitPropagator.h  quatMath.h  trajParams.h
src/: energyOptimal.cpp  orbitPropagator.cpp  quatMath.cpp  trajGenNode.cpp  trajParams.cpp
test_scripts/: cwTest.sh  quatTest.sh
